<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.utep.cs.cs4330.shippingcalculator.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/weight"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:id="@+id/editText"
        android:hint="Enter weight in oz"
        android:textAlignment="center" />

    <TextView
        android:text="@string/base_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="72dp"
        android:id="@+id/textView" />

    <TextView
        android:text="@string/total_shipping_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="71dp"
        android:id="@+id/textView3" />

    <TextView
        android:text="@string/basecost_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignEnd="@+id/editText"
        android:id="@+id/textView4" />

    <TextView
        android:text="@string/addedcost_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignStart="@+id/textView4"
        android:id="@+id/textView5" />

    <TextView
        android:text="@string/totalshippingcost_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/textView5"
        android:id="@+id/textView6" />

    <TextView
        android:text="@string/added_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView" />
</RelativeLayout>
